--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gitbook-plugin-tbfed-pagefooter",
+  "name": "gitbook-plugin-tbfed-pagefooter-v",
   "description": "定制每篇文章的页脚，可以添加版权和显示文件修改时间",
   "main": "index.js",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": {
-    "name": "zhj3618",
-    "email": "zhj3618@gmail.com"
+    "name": "crazycodeboy",
+    "email": "crazycodeboy@gmail.com"
   },
   "keywords": [
     "gitbook",
@@ -16,10 +16,10 @@
   "engines": {
     "gitbook": ">=2.4.3"
   },
-  "homepage": "https://github.com/zhj3618/gitbook-plugin-tbfed-pagefooter",
+  "homepage": "https://github.com/crazycodeboy/gitbook-plugin-tbfed-pagefooter-v",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zhj3618/gitbook-plugin-tbfed-pagefooter.git"
+    "url": "https://github.com/crazycodeboy/gitbook-plugin-tbfed-pagefooter-v.git"
   },
   "repository": {
     "type": "git",
